      including redirects would result in an error. (CNY-1693)
    * Derived recipes can now be based on troves which have files
      that have the same content (SHA1) as each other but are
      members of different link groups (are not intended to be
      installed as hard links to each other). (CNY-1733)
    * Derived packages now work properly if the troves they are based
      on contain dangling symlinks. (CNY-1914) 

Changes in 1.1.90:
  o Major Changes:
    * Label multiplicity, in which a trove on the same label
      appearing on multiple branches was understood as meaning that
      all the trove can be installed at once, is being generally
      deprecated.  Instead, a newer trove on a different branch that
      ends with the same label as an older trove will be considered
      together with and generally preferred to the older trove.
      Branch affinity, in which Conary keeps packages from the same
      branch during an update, is therefore replaced with label
      affinity, in which Conary keeps packages from the same label
      during an update.  Many of the individual changes in this
      version are parts of implementing this general change in
      behavior.

  o Client Changes:
    * Added getTroveLatestByLabel as a client-side call.
    * Label lookups pick the latest version which matches instead of
      the latest version on each branch.
    * Replaced branch affinity with label affinity.
    * getAllTroveLeavesByLabel() filters results by server names to
      eliminate spurious results from repositories which host multiple
      server names. (CNY-1771)
    * The cvc and conary commands now ignore broken pipes on standard
      output instead of producing a traceback. (CNY-1853)
    * Redirects follow the label of the branch they were built with
      instead of the branch itself.
    * Building redirects to a branch is now deprecated; redirects should
      point to labels instead. (CNY-1857)